test/good8.cminor
n: function integer () = {
		puts("hello world");
}

puts: function void ( s: string );

main: function integer () = {
		puts("hello world");
		printarray: function void ( a: array [] integer, size: integer ) = {
				i: integer;
					for( i=0;i<size;i++) {
								print a[i], "\n";
					}
		}

b: boolean;
x: integer = 3;
y: integer = 5;
b = x<y;     // ok: the expression x<y is boolean
f: integer = 0;
if(f==0) f++;    // ok: f==0 is a boolean expression
	c: char = 'a';
	if(c=='a') c++;  // ok: c and 'a' are both chars

		x: integer = 65;
		y: char = 'A';
		if(x>y) x = y; // error: x and y are of different types!

			f: integer = 0;
			if(f) f();      // error: f is not a boolean!
				writechar: function void ( c : char );
				a: integer = 65;
				writechar(a);  // error: a is not a char!
				b: array [2] boolean = {true,false};
				x: integer = 0;
				x = b[0];      // error: x is not a boolean!
}

square: function integer ( x: integer ) = {
		return x^2;
		print "The temperature is: ", temp, " degrees\n";
}
